# adas_spbu

./: .gitignore  AUDI_methods.py  CDbw.py  CMakeLists.txt  Custom_GA.py  LICENSE  LabeledPcd.py  MyTracker.cpp  MyTracker.h  MyUtils.py  Plane.py  README.md  SemanticKitti_methods.py  WindowState.h  config.yaml  convert.py  crop_roi.py  interpolation.py  lines.py  loader.py  main.cpp  main.py  main2.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  results.txt  setup.py
Eval/: EvalToGt.py  IoU.py  LabeledPcd.py  database.db  eval.py
UI/: BoundingBoxWidget.cpp  BoundingBoxWidget.h  WindowState.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Utils/: MyUtils.py  Plane.py  config.yaml  loader.py  pcdUtils.py
VisibilityEstimator/: CMakeLists.txt
VisibilityEstimator/src/: contourDetector.cpp  contourDetector.h  contourDrawer.cpp  contourDrawer.h  contoursMerger.cpp  contoursMerger.h  contoursOrdering.cpp  contoursOrdering.h  distanceEstimator.cpp  distanceEstimator.h  edgeDetector.cpp  edgeDetector.h  imageFilter.cpp  imageFilter.h  inversePerspectingMapping.cpp  inversePerspectiveMapping.h  main.cpp
frames/: 20190401145936_camera_frontcenter_000000080.json  20190401145936_camera_frontcenter_000000081.json  20190401145936_camera_frontcenter_000000082.json  20190401145936_camera_frontcenter_000000083.json  20190401145936_camera_frontcenter_000000084.json  20190401145936_camera_frontcenter_000000085.json  20190401145936_camera_frontcenter_000000086.json  20190401145936_camera_frontcenter_000000087.json  20190401145936_camera_frontcenter_000000088.json  20190401145936_camera_frontcenter_000000089.json  20190401145936_camera_frontcenter_000000090.json  20190401145936_camera_frontcenter_000000091.json  20190401145936_camera_frontcenter_000000092.json  20190401145936_camera_frontcenter_000000093.json  20190401145936_camera_frontcenter_000000094.json  20190401145936_camera_frontcenter_000000095.json  20190401145936_camera_frontcenter_000000096.json  20190401145936_camera_frontcenter_000000097.json  20190401145936_camera_frontcenter_000000098.json  20190401145936_camera_frontcenter_000000099.json  20190401145936_camera_frontcenter_000000100.json  20190401145936_camera_frontcenter_000000101.json  20190401145936_camera_frontcenter_000000102.json  20190401145936_camera_frontcenter_000000103.json  20190401145936_camera_frontcenter_000000104.json  20190401145936_camera_frontcenter_000000105.json  20190401145936_camera_frontcenter_000000106.json  20190401145936_camera_frontcenter_000000107.json  20190401145936_camera_frontcenter_000000108.json  20190401145936_camera_frontcenter_000000109.json  20190401145936_camera_frontcenter_000000110.json  20190401145936_camera_frontcenter_000000111.json  20190401145936_camera_frontcenter_000000112.json  20190401145936_camera_frontcenter_000000113.json  20190401145936_camera_frontcenter_000000114.json  20190401145936_camera_frontcenter_000000115.json  20190401145936_camera_frontcenter_000000116.json  20190401145936_camera_frontcenter_000000117.json  20190401145936_camera_frontcenter_000000118.json  20190401145936_camera_frontcenter_000000119.json  (+89 more)
lidar/: 20190401145936_lidar_frontcenter_000000080.npz  20190401145936_lidar_frontcenter_000000081.npz  20190401145936_lidar_frontcenter_000000082.npz  20190401145936_lidar_frontcenter_000000083.npz  20190401145936_lidar_frontcenter_000000084.npz  20190401145936_lidar_frontcenter_000000085.npz  20190401145936_lidar_frontcenter_000000086.npz  20190401145936_lidar_frontcenter_000000087.npz  20190401145936_lidar_frontcenter_000000088.npz  20190401145936_lidar_frontcenter_000000089.npz  20190401145936_lidar_frontcenter_000000090.npz  20190401145936_lidar_frontcenter_000000091.npz  20190401145936_lidar_frontcenter_000000092.npz  20190401145936_lidar_frontcenter_000000093.npz  20190401145936_lidar_frontcenter_000000094.npz  20190401145936_lidar_frontcenter_000000095.npz  20190401145936_lidar_frontcenter_000000096.npz  20190401145936_lidar_frontcenter_000000097.npz  20190401145936_lidar_frontcenter_000000098.npz  20190401145936_lidar_frontcenter_000000099.npz  20190401145936_lidar_frontcenter_000000100.npz  20190401145936_lidar_frontcenter_000000101.npz  20190401145936_lidar_frontcenter_000000102.npz  20190401145936_lidar_frontcenter_000000103.npz  20190401145936_lidar_frontcenter_000000104.npz  20190401145936_lidar_frontcenter_000000105.npz  20190401145936_lidar_frontcenter_000000106.npz  20190401145936_lidar_frontcenter_000000107.npz  20190401145936_lidar_frontcenter_000000108.npz  20190401145936_lidar_frontcenter_000000109.npz  20190401145936_lidar_frontcenter_000000110.npz  20190401145936_lidar_frontcenter_000000111.npz  20190401145936_lidar_frontcenter_000000112.npz  20190401145936_lidar_frontcenter_000000113.npz  20190401145936_lidar_frontcenter_000000114.npz  20190401145936_lidar_frontcenter_000000115.npz  20190401145936_lidar_frontcenter_000000116.npz  20190401145936_lidar_frontcenter_000000117.npz  20190401145936_lidar_frontcenter_000000118.npz  20190401145936_lidar_frontcenter_000000119.npz  (+89 more)
lidar_files/: 20180810150607_lidar_frontcenter_000000061.npz  20180810150607_lidar_frontcenter_000000062.npz  20180810150607_lidar_frontcenter_000000063.npz  20180810150607_lidar_frontcenter_000000064.npz  (+4 more)
trackers/: CSRTTracker.cpp  (+14 more)
traffic_signs_detection/traffic_signs_detection/: CMakeLists.txt  detectorPolygons.cpp  detectorPolygons.h  imageSegmentation.cpp  imageSegmentation.h  main.cpp  main.h
visualizer/: CMakeLists.txt  camera.cpp  camera.h  coordinateSystem.cpp  coordinateSystem.h  cube.cpp  cube.h  models.cpp  models.h  objParser.cpp  objParser.h  plane.cpp  plane.h  vertex.cpp  vertex.h
visualizer/include/: BorderValidator.h  Borders.h  ParabolaStrategy.h  Road.h  StrategyOfAddBorders.h  camera.h  coordinateSystem.h  cube.h  models.h  objParser.h  parabola.h  plane.h  segment.h
visualizer/source/: BorderValidator.cpp  Borders.cpp  ParabolaStrategy.cpp  Road.cpp  StrategyOfAddBorders.cpp  camera.cpp  coordinateSystem.cpp  cube.cpp  main.cpp  models.cpp  objParser.cpp  parabola.cpp  plane.cpp  segment.cpp
(+9 files in other folders)
